--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@
     line-height: 20.4px;
 }
 
+.fes-nav-el {
+    list-style-type: none;
+    display: inline-block;
+}
+
 .fes-content {
     color: #ffffff;
     font-size: 25px;
