--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+@font-face{
+    
+    font-family: 'Franklin Gothic Medium';
+    src: url('../static/font/franclingothicmedia.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .fes-body {
     font-family: 'Franklin Gothic Medium';
     background-image: url(../static/image/background.jpg);
@@ -18,6 +26,7 @@
 }
 
 .fes-nav-el {
+    margin: 0px 4px;
     list-style-type: none;
     display: inline-block;
 }
