--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,11 @@
 }
 
 .fes-spacing {
-    margin: 5% 5% 5% 5%;
+    margin: 5% 5%;
 }
 
 .fes-nav {
+    -webkit-padding-start: 0;
     color: rgb(177, 187, 203);
     font-size: 17px;
     font-weight: 400;
@@ -32,6 +33,7 @@
 }
 
 .fes-content {
+    margin: 0 8%;
     color: #ffffff;
     font-size: 25px;
     font-weight: 400;
@@ -53,8 +55,13 @@
 }
 
 .fes-footer {
-    color: #ffffff;
+    color: rgb(177, 187, 203);
     font-size: 12px;
     font-weight: 400;
     line-height: 14.4px;
+    margin: auto;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    margin: 5% 5%;
 }
