Fix margin top header

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@
     width: 467px;
 }
 .fes-content-header {
+    margin-top: 5%;
     font-size: 25px;
     font-weight: 400;
     line-height: 30px;
